# docparser

./: .env.example  .gitignore  Cargo.toml  README.md
.cargo/: config.toml
crates/docparser-api/: Cargo.toml  build.rs
crates/docparser-api/src/: config.rs  inference.rs  lib.rs  main.rs
crates/docparser-api/tests/: parse_endpoint.rs
crates/docparser-candle-utils/: Cargo.toml
crates/docparser-candle-utils/src/: batch_norm.rs  device.rs  error.rs  json_config.rs  lazy_runner.rs  lib.rs
crates/docparser-doc-prep/: Cargo.toml
crates/docparser-doc-prep/src/: lib.rs
crates/docparser-doc-prep/src/orientation/: config.rs  error.rs  mod.rs  model.rs  nn.rs  preprocess.rs  rotate.rs
crates/docparser-doc-prep/src/unwarp/: config.rs  error.rs  mod.rs  model.rs  nn.rs  preprocess.rs
crates/docparser-doc-prep/tests/: load_inference.rs  orientation_preprocess_parity.rs  unwarp_preprocess_parity.rs
crates/docparser-download/: Cargo.toml
crates/docparser-download/src/: error.rs  fetch.rs  hf.rs  lib.rs  main.rs  manifest.rs  verify.rs
crates/docparser-pipeline/: Cargo.toml
crates/docparser-pipeline/proptest-regressions/: layout_postprocess.txt
crates/docparser-pipeline/src/: block_merge.rs  doc_preprocess.rs  error.rs  layout_filter.rs  layout_merge.rs  layout_nms.rs  layout_postprocess.rs  lib.rs  markdown.rs
crates/docparser-pipeline/tests/: layout_postprocess.rs  pipeline_official.rs  pipeline_smoke.rs  pipeline_snapshot.rs
crates/docparser-test-utils/: Cargo.toml
crates/docparser-test-utils/src/: lib.rs
crates/paddleocr-vl/: Cargo.toml
crates/paddleocr-vl/src/: error.rs  lib.rs  model.rs  preprocess.rs  processor.rs
crates/paddleocr-vl/src/paddleocr_vl/: mod.rs  text.rs  utils.rs  vision.rs
crates/paddleocr-vl/tests/: generate_parity.rs  preprocess_parity.rs  safetensors_keys.rs
crates/paddleocr-vl/tests/fixtures/: config.json
crates/pp-doclayout-v3/: Cargo.toml
crates/pp-doclayout-v3/src/: error.rs  image_processor.rs  lib.rs  model.rs  onnx.rs  postprocess.rs  preprocess.rs
crates/pp-doclayout-v3/src/pp_doclayout_v3/: config.rs  decoder.rs  deformable.rs  detection.rs  encoder.rs  global_pointer.rs  grid_sample.rs  hgnet_v2.rs  mod.rs  model.rs  nn.rs  ops.rs
crates/pp-doclayout-v3/tests/: layout_preprocess_parity.rs  ocr_demo2_layout.rs  postprocess_parity.rs  safetensors_keys.rs
crates/pp-doclayout-v3/tests/fixtures/: config.json
crates/pp-lcnet-doc-ori/: Cargo.toml
crates/pp-lcnet-doc-ori/src/: config.rs  error.rs  lib.rs  model.rs  nn.rs  preprocess.rs  rotate.rs
crates/pp-lcnet-doc-ori/tests/: load_inference.rs  preprocess_parity.rs
crates/uvdoc/: Cargo.toml
crates/uvdoc/src/: config.rs  error.rs  grid_sample.rs  lib.rs  model.rs  nn.rs  padding.rs  preprocess.rs
crates/uvdoc/tests/: load_inference.rs  preprocess_parity.rs
docs/: CRATE_STRUCTURE.md  alignment_defaults.md  layout_labels_and_models.md  paddleocr_model_alignment.md
scripts/: mkl-env.sh
tests/goldens/: doc_ori_preprocess.json  layout_postprocess.json  layout_postprocess_ocr_demo2.json  layout_safetensor_key_prefixes.json  uvdoc_preprocess.json  uvdoc_rectify.json  vlm_generate_ocr_demo2.json  vlm_preprocess_ocr_demo2.json  vlm_preprocess_tasks.json  vlm_safetensor_key_prefixes.json
tests/goldens/pipeline/: layout_demo_official.json  page_simple.json
tools/: parity_dump_tensors.py  parity_gen.py
