[workspace]
resolver = "2"
members = [
    "crates/docparser-candle-utils",
    "crates/docparser-download",
    "crates/docparser-test-utils",
    "crates/paddleocr-vl",
    "crates/pp-doclayout-v3",
    "crates/docparser-pipeline",
    "crates/docparser-api",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
candle-core = { version = "0.10", default-features = true }
candle-nn = { version = "0.10" }

# Inference-heavy binaries: LTO + single codegen unit for hotter CPU kernels.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

# Maximum link-time optimization (slower `cargo build`, slightly faster runtime).
[profile.release-lto]
inherits = "release"
lto = "fat"
codegen-units = 1

# `cargo test --release` without long LTO link.
[profile.release-fast]
inherits = "release"
lto = false
codegen-units = 16
