[package]
name = "docparser-api"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[[bin]]
name = "docparser-api"
path = "src/main.rs"

[features]
default = []
mkl = ["docparser-pipeline/mkl", "dep:intel-mkl-src"]
cuda = ["docparser-pipeline/cuda"]
metal = ["docparser-pipeline/metal"]
wgpu = ["docparser-pipeline/wgpu"]

[dependencies]
anyhow = "1"
dotenvy = "0.15"
axum = { version = "0.8", features = ["multipart"] }
docparser-download = { path = "../docparser-download" }
docparser-pipeline = { path = "../docparser-pipeline" }
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
intel-mkl-src = { version = "0.8", optional = true }

[dev-dependencies]
axum = { version = "0.8", features = ["multipart"] }
docparser-candle-utils = { path = "../docparser-candle-utils" }
docparser-test-utils = { path = "../docparser-test-utils" }
serde_json = "1"
http-body-util = "0.1"
tokio = { version = "1", features = ["rt", "macros"] }
tower = "0.5"
