[package]
name = "docparser-candle-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared Candle weight loading and parity helpers for docparser"

[dependencies]
anyhow = "1"
candle-core.workspace = true
candle-nn.workspace = true
safetensors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
docparser-test-utils = { path = "../docparser-test-utils" }
