[package]
name = "docparser-doc-prep"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Document orientation and unwarping models (Candle + safetensors)"

[features]
mkl = ["candle-core/mkl", "candle-nn/mkl", "docparser-candle-utils/mkl"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "docparser-candle-utils/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "docparser-candle-utils/metal"]

[dependencies]
thiserror = "2"
candle-core.workspace = true
candle-nn.workspace = true
docparser-candle-utils = { path = "../docparser-candle-utils" }
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
docparser-test-utils = { path = "../docparser-test-utils" }
