[package]
name = "docparser-download"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Parallel HuggingFace model and fixture downloader for docparser"

[[bin]]
name = "docparser-download"
path = "src/main.rs"

[dependencies]
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
indicatif = "0.18"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
