[package]
name = "docparser-pipeline"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
mkl = [
    "paddleocr-vl/mkl",
    "pp-doclayout-v3/mkl",
    "docparser-doc-prep/mkl",
]

[dependencies]
thiserror = "2"
candle-core.workspace = true
image = "0.25"
paddleocr-vl = { path = "../paddleocr-vl" }
pp-doclayout-v3 = { path = "../pp-doclayout-v3" }
docparser-doc-prep = { path = "../docparser-doc-prep" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
docparser-test-utils = { path = "../docparser-test-utils" }
insta = { version = "1", features = ["json"] }
proptest = "1"
