[package]
name = "paddleocr-vl"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PaddleOCR-VL-1.6 inference from HuggingFace artifacts (Candle)"

[dependencies]
anyhow = "1"
candle-core = "0.10"
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
safetensors = "0.7"
thiserror = "2"
tokenizers = { version = "0.23", default-features = false, features = ["onig"] }
tracing = "0.1"

[dev-dependencies]
docparser-test-utils = { path = "../docparser-test-utils" }
