[package]
name = "paddleocr-vl"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PaddleOCR-VL-1.6 inference from HuggingFace artifacts (Candle)"

[features]
mkl = ["candle-core/mkl", "candle-nn/mkl", "docparser-candle-utils/mkl"]

[dependencies]
candle-core.workspace = true
candle-nn.workspace = true
docparser-candle-utils = { path = "../docparser-candle-utils" }
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
safetensors = "0.7"
thiserror = "2"
tokenizers = { version = "0.23", default-features = false, features = ["onig"] }
tracing = "0.1"
sha2 = "0.10"

[[bin]]
name = "vlm_write_golden"
path = "src/bin/vlm_write_golden.rs"

[dev-dependencies]
docparser-test-utils = { path = "../docparser-test-utils" }
