[package]
name = "pp-doclayout-v3"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PP-DocLayoutV3 layout detection (native Candle inference + safetensors weights)"

[features]
mkl = ["candle-core/mkl", "candle-nn/mkl", "docparser-candle-utils/mkl"]

[dependencies]
candle-core.workspace = true
candle-nn.workspace = true
docparser-candle-utils = { path = "../docparser-candle-utils" }
fast_image_resize = "5"
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
safetensors = "0.7"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
docparser-test-utils = { path = "../docparser-test-utils" }
